Support for Unicode elements & multi-line attribs

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 XmlStreamer
 oskar.thornblad@gmail.com
+Contributions from: dennis.sonntag@valiton.com
 Free for everyone for everything, attribution voluntary
 ------
 
