Corrected the README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 XmlStreamer
 oskar.thornblad@gmail.com
-Contributions from: dennis.sonntag@valiton.com
+Contributions from: Valiton GmbH
 Free for everyone for everything, attribution voluntary
 ------
 
